src/objects/CommCareHQ_Performance_Metrics__c.object
<CustomObject>
    <description>Performance metrics for HQ, including ave page load time and apdex</description>
    <fields>
        <fullName>Avg_Page_Load_200k_Submissions__c</fullName>
        <description>avg page load/# of submissions * 200000</description>
        <formula>Avg_Page_Load__c / Number_of_Submissions__c  * 200000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg Page Load/200k Submissions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Page_Load__c</fullName>
        <description>Time in seconds</description>
        <label>Avg Page Load</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date data is taken</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ICDS_Server_Response_Time__c</fullName>
        <description>In ms</description>
        <label>ICDS Server Response Time</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ICDS_Uptime__c</fullName>
        <label>ICDS Uptime</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>India_Server_Response_Time__c</fullName>
        <description>In ms</description>
        <label>India Server Response Time</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>India_Server_Uptime__c</fullName>
        <description>India server uptime from pingdom</description>
        <label>India Server Uptime</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Number_of_Submissions__c</fullName>
        <label>Number of Submissions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prod_Server_Response_Time__c</fullName>
        <description>In ms</description>
        <label>Prod Server Response Time</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prod_Uptime__c</fullName>
        <label>Prod Uptime</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Server_Apdex__c</fullName>
        <label>Server Apdex</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Apdex__c</fullName>
        <label>Total Apdex</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>CommCareHQ Performance Metrics</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Prod_Uptime__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CommCareHQ Performance Metrics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CommCareHQ Performance Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>